fixed mobile layout bug

--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ nav a:hover {
 }
 
 .words {
-	padding: 0 7%;
+	padding: 1em 7%;
 }
 
 #name {
